Cache the NTP details per profile

A simple benchmark of loading an empty page over and over again shows
that NewTabURLDetails::ForProfile accounts for ~1.3% of all the CPU work,
mostly because it is called dozens of times per navigation. This CL just
caches it alongside the profile it came from, and flushes the cache when
the template service changes.

Bug: 786035
Change-Id: Ie23a4891fa1f294fafc8278c037c4e00978250b8